# vsomeip-docker-benchmark

./: CMakeLists.txt  Dockerfile  README.md  compile.sh  entrypoint.sh
hello_world/: CMakeLists.txt  hello_world_client.hpp  hello_world_service.hpp
hello_world/conf/: client.json  service.json
request_response/: CMakeLists.txt  bench_request_response_client.cpp  bench_request_response_service.cpp
request_response/conf/: bench_request_response_client_external.json.in  client.json  service.json
